[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-asset-screener"
version = "0.1.0"
description = "CLI screener for US stocks based on LLM + financial metrics (P/FCF, EV/EBITDA, SOTP, float/EV)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Evgeny Igumnov", email = "igumnovnsk@gmail.com" }]
keywords = ["finance", "stocks", "LLM", "valuation", "edgar", "10-K", "screener"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Office/Business :: Financial :: Investment",
  "Environment :: Console",
]

dependencies = [
  "requests",
  "yfinance",
  "pandas",
  "edgartools",
  "langgraph",
  "langchain_openai",
  "langchain_mcp_adapters",
  "mcp_server_calculator",
  "argparse",
  "python-dotenv",
]

[project.scripts]
ai-asset-screener = "app.console:main"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["cache*"]
